Made the website responsive for 3 different screen

--- a/Contact Page/index.html
+++ b/Contact Page/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Privy</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="form.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="icon" href="images\favicon-01.webp">
 
@@ -19,6 +21,7 @@
     <div class="main">
         <nav class="navbar">
             <img src="images/Group 1012-1.svg" alt="Privy">
+            <i class="fa-solid fa-bars"></i> 
             <nav class="left-side">
 
                 <ul>
@@ -28,19 +31,19 @@
                     <li><a class="nav_link" href="#">Pricing</a></li>
                 </ul>
             </nav>
-            <nav class="right-side">
+            <nav class="right-side">          
                 <ul>
                     <li><a class="nav-link" href="#">Login</a></li>
                 </ul>
                 <button class="header-button">Try Privy FREE</button>
             </nav>
+                
         </nav>
 
         <!-- This is second division -->
 
         <div class="main-container">
             <div class="text-container">
-                <h1>&nbsp;</h1>
                 <h3>Contact Us</h3>
                 <p>Need to get in touch with us? Either fill out the form with your inquiry or find the <a class="link"
                         href="https://www.privy.com/contact#department-emails">department email</a>
